# Agentic_Langraph

./: README.md  main.py  pyproject.toml  requirement.txt
1-Basic_chatbot/: basic_chatbot.ipynb  humaninloop.ipynb
2-Debugging/: debugging.ipynb  fix_cell.py  fixed_debugging.py  notebook_fixes.py  robust_tools.py  simple_chat.py
3-Multiagent/: multiAIagent.ipynb
